[gd_scene load_steps=15 format=2]

[ext_resource path="res://jogador1e2.png" type="Texture" id=1]
[ext_resource path="res://script/player1.gd" type="Script" id=2]
[ext_resource path="res://script/player2.gd" type="Script" id=3]
[ext_resource path="res://fundo.png" type="Texture" id=4]
[ext_resource path="res://patobola.png" type="Texture" id=5]
[ext_resource path="res://script/bola.gd" type="Script" id=6]
[ext_resource path="res://sound/ducksound.mp3" type="AudioStream" id=7]
[ext_resource path="res://font/CUTE FROG.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Pong.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 87.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 514, 10 )

[sub_resource type="CircleShape2D" id=4]
radius = 32.6497

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 53, 313.5 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 4
outline_color = Color( 0.196078, 1, 0, 1 )
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]
position = Vector2( 10, 6 )
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 507, 302 )
scale = Vector2( 0.208061, 0.208127 )
texture = ExtResource( 4 )

[node name="player1" type="KinematicBody2D" parent="."]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="player1"]
position = Vector2( 10, 315 )
scale = Vector2( 0.212427, 0.314062 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player1"]
position = Vector2( 10, 315.5 )
shape = SubResource( 2 )

[node name="player2" type="KinematicBody2D" parent="."]
position = Vector2( 984, -4 )
collision_layer = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="player2"]
position = Vector2( 10, 315 )
scale = Vector2( 0.212427, 0.314062 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player2"]
position = Vector2( 10, 315.5 )
shape = SubResource( 2 )

[node name="ParedeCima" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeCima"]
position = Vector2( 501, -13 )
shape = SubResource( 3 )

[node name="ParedeBaixo" type="StaticBody2D" parent="."]
position = Vector2( 3, 611 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeBaixo"]
position = Vector2( 501, -13 )
shape = SubResource( 3 )

[node name="bola" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 3
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="bola"]
position = Vector2( 479, 291 )
scale = Vector2( 0.0744005, 0.0608754 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bola"]
position = Vector2( 478, 292 )
shape = SubResource( 4 )

[node name="foraesquerda" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="foraesquerda"]
position = Vector2( -63, 305 )
shape = SubResource( 5 )

[node name="foradireita" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="foradireita"]
position = Vector2( 1067, 298 )
shape = SubResource( 5 )

[node name="batidabola" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Label1" type="Label" parent="."]
margin_left = 132.0
margin_top = 81.0
margin_right = 244.0
margin_bottom = 95.0
rect_scale = Vector2( 1.11934, 0.750579 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )

[node name="Label2" type="Label" parent="."]
margin_left = 658.0
margin_top = 86.0
margin_right = 770.0
margin_bottom = 149.0
rect_scale = Vector2( 1.11934, 0.750579 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )

[connection signal="body_entered" from="foraesquerda" to="." method="_on_foraesquerda_body_entered"]
[connection signal="body_entered" from="foradireita" to="." method="_on_foradireita_body_entered"]
